--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -12,7 +12,8 @@
   }
 }
 
-body { 
+body {
+	font-family: Aleo, sans-serif !important;
 	-webkit-print-color-adjust:exact !important;
 	print-color-adjust:exact !important;
 }
